[package]
name = "wpt-runner"
version = "0.1.0"
edition = "2024"

[features]
default = ["backend-onnx"]
backend-onnx = ["rustnn/onnx-runtime"]
backend-coreml = ["rustnn/coreml-runtime"]
backend-trtx = ["rustnn/trtx-runtime"]
backend-trtx-mock = ["rustnn/trtx-runtime-mock"]

[dependencies]
rustnn = { path = "../../../rustnn", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
half = "2"
base64 = "0.22"
webnn-graph = { git = "https://github.com/rustnn/webnn-graph", branch = "main" }
